--- a/projects/showcase/src/app/app.component.html
+++ b/projects/showcase/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>Showcase</h1>
 
 <h2>Main Entry Point</h2>
-<lib-ui-sdk></lib-ui-sdk>
+<lib-ui-sdk-moo></lib-ui-sdk-moo>
 
 <h2>Secondary Entry Point</h2>
 <lib-button></lib-button>
